# variational_staple

./: README.md  setup.cfg
demo/: unordered.ipynb
variational_staple/: __init__.py  correlated.py  hierarchy.py  mixture.py  unordered.py
