[metadata]
name = variational_staple
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = STAPLE with a prior on performance + extension to ordered classes
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/variational_staple

[options]
python_requires = >= 3.7
install_requires =
    numpy
    scipy
